examples/test/testpolicy8175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8175
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key44: value29
      key43: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value3
          key12: value4
          key11: value23
      podSelector:
        matchLabels:
          key15: value35
          key45: value11
          key10: value22
